<resources>
    <string name="app_name">Book Store</string>
    <string name="category_overview">Product Details</string>
    <string name="hint_name">Name</string>
    <string name="hint_price">Price</string>
    <string name="hint_quantity">Quantity</string>
    <string name="hint_supplier_name">Supplier Name</string>
    <string name="hint_supplier_phone">Supplier Phone</string>
    <string name="action_save">Save</string>
    <string name="action_delete">Delete</string>
    <string name="action_edit">Edit Details</string>
    <string name="editor_activity_title_new_book">Add a Book</string>
    <string name="editor_activity_title_edit_book">Edit Book</string>
    <string name="empty_view_title_text">It\'s a bit dusty in here &#8230;</string>
    <string name="empty_view_subtitle_text">Get started by your first book!</string>
    <string name="editor_insert_book_successful">Book saved</string>
    <string name="editor_insert_book_failed">Error with saving book</string>
    <string name="editor_update_book_successful">Book updated</string>
    <string name="editor_update_book_failed">Error with updating book</string>
    <string name="unsaved_changes_dialog_msg">Discard your changes and quit editing?</string>
    <string name="discard">Discard</string>
    <string name="keep_editing">Keep Editing</string>
    <string name="delete_dialog_msg">Delete this book?</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="editor_delete_book_successful">Book deleted</string>
    <string name="editor_delete_book_failed">Error with deleting book</string>
    <string name="editor_black_entry">Please enter something in each box</string>
    <string name="quantity_main_activity">Quantity: %1$s</string>
    <string name="price_main_activity">Price Per Book: %1$s</string>
    <string name="supplier_phone">Suppliers Phone Number</string>
    <string name="sold">Sold a Book</string>
    <string name="error_phone">Phone number must be formatted like this: (***)***-**** </string>
    <string name="error_empty">Please make sure everything is filled in.</string>

</resources>
