<?xml version="1.0" encoding="utf-8"?><!-- Copyright (C) 2016 The Android Open Source Project
     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at
          http://www.apache.org/licenses/LICENSE-2.0
     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
--><!-- Layout for the editor -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/activity_margin"
    tools:context=".EditActivity">

    <!-- Overview category -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            style="@style/CategoryStyle"
            android:text="@string/category_overview" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:orientation="vertical"
            android:paddingLeft="4dp">

            <EditText
                android:id="@+id/edit_name"
                style="@style/EditFieldStyle"
                android:hint="@string/hint_name"
                android:inputType="textCapWords" />

            <EditText
                android:id="@+id/edit_price"
                style="@style/EditFieldStyle"
                android:hint="@string/hint_price"
                android:inputType="number" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">


                <EditText
                    android:id="@+id/edit_quantity"
                    style="@style/EditFieldStyle"
                    android:hint="@string/hint_quantity"
                    android:inputType="number" />

                <Button
                    android:id="@+id/incrementQuantity"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_marginTop="16dp"
                    android:text="+" />

                <Button
                    android:id="@+id/decrementQuantity"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="16dp"
                    android:text="-" />

            </LinearLayout>

            <EditText
                android:id="@+id/edit_supplier_name"
                style="@style/EditFieldStyle"
                android:hint="@string/hint_supplier_name"
                android:inputType="text" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/edit_supplier_phone"
                    style="@style/EditFieldStyle"
                    android:hint="@string/hint_supplier_phone"
                    android:inputType="phone" />

                <Button
                    android:id="@+id/callSupplier"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_marginTop="16dp"
                    android:background="@drawable/phone_black_36dp"
                    />

                <Button
                    android:id="@+id/edit_the_number"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="16dp"
                    android:background="@drawable/edit_black_48dp"/>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>
